yoshimi 1.5.9 M

2018-12-2 Will
* BugFix: readAllData() not returning indirect value.
* More details available in CLI list part.

2018-12-1 Will
* CLI List part gives detailed current status.
  It gives further details if in part context.

2018-11-30 Will
* Prng behaviour now confirmed and reseeds removed.
  Quite unnecessary. Needs many hours of continuous
  playing to begin to get anywhere near pattern repeat.

2018-11-29 Will
* Some corrections and improvements to new prng.
* Further refinements to prng.
  In some cases we were converting to float then
  converting back to integer!
* Final tweaks to prng - I think!
* Rationalised some float to int conversions.

2018-11-28 Will
* Inplemented a new prng with no external libraries
  based on "A small noncryptographic PRNG"
  by Bob Jenkins

2018-11-27 Will
* Randomness can now be disabled for test purposes.
  Enabe #define NORANDOM in globals.h
  This makes subSynth and padSynth sound strange :o
* A bit more work on unified presets placeholders.

2018-11-25 Will
* Moved all static CmdInterface strings from .cpp to .h
* Corrected some CLI EQ text.
* Changed CLI internal names to avoid potential clashes.

2018-11-24 Will
* BugFix: Limits tests not finding dynfilter-filter.
* Completed CLI access to dynfilter. Phew!
* Some extra CLI code cleanups.

2018-11-23 Will
* All CLI effects help lists done.
* CLI EQ controls done.
  (band and stages don't update GUI yet)
* Some code cleanups.
* CLI dynfilter mostly done.
  Not the actual filter editor.

2018-11-22 Will
* Revised CLI effects code.
* BugFix: SysEff 'send' returned wrong value.
* CLI help effect lists complete to distortion.
* No top level CLI help data when calling by name.

2018-11-21 Will
* CLI Reverb and Echo controls completed.
  and created new help lists for these.
* Added help list of all effects (by name).

2018-11-20 Will
* Small adjustments to NRPN effects in synthEngine.
* Started defining CLI effect controls.

2018-11-18 Will