@@ -3,13 +3,11 @@ BUG! Multi instances produce jack errors when main instance closed, even if they
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
-Maybe BUG crash when loading files from banks - cured by clearing an recreating config files.
-
 Revise GUI voice list related to voice editor.
 
 Sort out bank properly.
 
-Sort out cli part effect controls. Also sys/ins updates wrong.
+CLI sys/ins updates wrong.
 
 Some CLI addvoice kit mode controls don't update the GUI.
 
@@ -43,8 +41,6 @@ Make NRPN MIDI-learn able to be re-learned.
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 
 Consider, Pitchwheel split range in Controllers, but that one seems a bit pointless to me!
-
-Change root/bank/instrument lists to single file for all instances.
 
 Make loading effect presets update the 'top' line.
 
