@@ -272,7 +272,7 @@ static string commonlist [] = {
     "PUnch Stretch <n> &",      "attack boost extend",
     "PUnch Velocity <n> &",     "attack boost velocity sensitivity",
     "OVertone Position <s> #",  "relationship to fundamental",
-    "","(HArmonic,SIne,POwer,SHift,UShift,LShift,UPower,LPower)",
+    "","(HArmonic, SIne, POwer, SHift, UShift, LShift, UPower, LPower)",
     "OVertone First <n> #",     "degree of first parameter",
     "OVertone Second <n> #",    "degree of second parameter",
     "OVertone Harmonic <n> #",  "amount harmonics are forced",
@@ -423,7 +423,7 @@ static string waveformlist [] = {
     "Base Convert [s]",         "use resultant basic wave as base shape",
     "","also clear modifers and harmonics (OFF {other})",
     "SHape Type <s>",           "wave shape modifer type",
-    "","(OFF, ATAn, ASYm1, POWer, SINe QNTs, ZIGzag, LMT, ULMt, LLMt, ILMt, CLIp, AS2, PO2, SGM)",
+    "","(OFF, ATAn, ASYm1, POWer, SINe, QNTs, ZIGzag, LMT, ULMt, LLMt, ILMt, CLIp, AS2, PO2, SGM)",
     "SHape Par <n>",            "wave shape modifier amount",
     "Filter Type <s>","",
     "","(OFF, LP1, HPA1, HPB1, BP1, BS1, LP2, HP2, BP2, BS2, COS, SIN, LSH, SGM)",
@@ -577,7 +577,7 @@ static string choruslist [] = {
     "RANdom <n>",       "LFO randomness",
     "WAVe <s>",         "LFO waveshape (sine, triangle)",
     "SHIft <n>",        "L/R phase shift",
-    "DEPTH <n>",        "LFO depth",
+    "DEPth <n>",        "LFO depth",
     "DELay <n>",        "LFO delay",
     "FEEdback <n>",     "chorus feedback",
     "CROssover <n>",    "L/R routing",
@@ -592,7 +592,7 @@ static string phaserlist [] = {
     "RANdom <n>",       "LFO randomness",
     "WAVe <s>",         "LFO waveshape (sine, triangle)",
     "SHIft <n>",        "L/R phase shift",
-    "DEPTH <n>",        "LFO depth",
+    "DEPth <n>",        "LFO depth",
     "FEEdback <n>",     "phaser feedback",
     "STAges <n>",       "filter stages",
     "CROssover <n>",    "L/R routing",
@@ -609,11 +609,11 @@ static string alienwahlist [] = {
     "FREquency <n>",    "LFO frequency",
     "WAVe <s>",         "LFO waveshape (sine, triangle)",
     "SHIft <n>",        "L/R phase shift",
-    "DEPTH <n>",        "LFO depth",
+    "DEPth <n>",        "LFO depth",
     "FEEdback <n>",     "filter feedback",
     "DELay <n>",        "LFO delay",
     "CROssover <n>",    "L/R routing",
-    "RELative <n>",     "relatove phase",
+    "RELative <n>",     "relative phase",
     "end"
 };
 
@@ -624,19 +624,19 @@ static string distortionlist [] = {
     "DRIve <n>",        "input level",
     "OUTput <n>",       "output balance",
     "WAVe <s>",         "function waveshape",
-    "","(ATAn, ASYm1, POWer, SINe QNTs, ZIGzag, LMT, ULMt, LLMt, ILMt, CLIp, AS2, PO2, SGM)",
+    "","(ATAn, ASYm1, POWer, SINe, QNTs, ZIGzag, LMT, ULMt, LLMt, ILMt, CLIp, AS2, PO2, SGM)",
     "INvert <s>",       "invert ?  (ON {other})",
     "LOW <n>",          "low pass filter",
     "HIGh <n>",         "high pass filter",
-    "STEreo <s>",       "Stereo (ON {other})",
+    "STEreo <s>",       "stereo (ON {other})",
     "PREfilter <s>",    "filter before distortion",
     "end"
 };
 
 static string eqlist [] = {
     "LEVel <n>",        "intensity",
-    "BANd <b>",         "EQ band number for following controls",
-    "FILter <s>",       "filter type",
+    "BANd <n>",         "EQ band number for following controls",
+    "  FILter <s>",       "filter type",
     "","(LP1, HP1, LP2, HP2, NOT, PEA, LOW, HIG)",
     "  FREquency <n>",  "cutoff/band frequency",
     "  GAIn <n>",       "makeup gain",
@@ -652,7 +652,7 @@ static string dynfilterlist [] = {
     "RANdom <n>",       "LFO randomness",
     "WAVe <s>",         "LFO waveshape (sine, triangle)",
     "SHIft <n>",        "L/R phase shift",
-    "DEPTH <n>",        "LFO depth",
+    "DEPth <n>",        "LFO depth",
     "SENsitivity <n>",  "Amount amplitude changes filter",
     "INVert <s>",       "Reverse effect of sensitivity (ON {other})",
     "RATe <n>",         "speed of filter change with amplitude",
@@ -783,7 +783,7 @@ static string fx_presets [] = {
     "8, echo 1, echo 2, simple echo, canyon, panning echo 1, panning echo 2, panning echo 3, feedback echo",
     "10, chorus 1, chorus 2, chorus 3, celeste 1, celeste 2, flange 1, flange 2, flange 3, flange 4, flange 5",
     "12, phaser 1, phaser 2, phaser 3, phaser 4, phaser 5, phaser 6, aphaser 1, aphaser 2, aphaser 3, aphaser 4, aphaser 5, aphaser 6",
-    "4, alienwah 1, alienwah 2, alienwah 3, alienwah 4 ",
+    "4, alienwah 1, alienwah 2, alienwah 3, alienwah 4",
     "6, overdrive 1, overdrive 2, exciter 1, exciter 2, guitar amp, quantisize",
     "1, not available",
     "4, wahwah, autowah, vocal morph 1, vocal morph 2"
